salesforce-litle-MP/src/objects/SalesforceLitleMappingsObject__c.object
<CustomObject>
    <description>Salesforce and Litle&apos;s field mappings object</description>
    <fields>
        <fullName>legalEntityAnnualCreditCardSalesVolumeD__c</fullName>
        <description>Legal Entity AnnualCreditCardSalesVolumeD</description>
        <label>legalEntityAnnualCreditCardSalesVolumeD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityAnnualCreditCardSalesVolumeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityAnnualCreditCardSalesVolumeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityAnnualCreditCardSalesVolume__c</fullName>
        <description>Legal Entity AnnualCreditCardSalesVolume</description>
        <label>legalEntityAnnualCreditCardSalesVolume</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCityD__c</fullName>
        <description>Legal Entity CityD</description>
        <label>legalEntityCityD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCityX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityCityX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityCity__c</fullName>
        <description>Legal Entity City</description>
        <label>legalEntityCity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityContactPhoneD__c</fullName>
        <description>Legal Entity ContactPhoneD</description>
        <label>legalEntityContactPhoneD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityContactPhoneX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityContactPhoneX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityContactPhone__c</fullName>
        <description>Legal Entity ContactPhone</description>
        <label>legalEntityContactPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCountryCodeD__c</fullName>
        <description>Legal Entity CountryCodeD</description>
        <label>legalEntityCountryCodeD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCountryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityCountryCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityCountryCode__c</fullName>
        <description>Legal Entity CountryCode</description>
        <label>legalEntityCountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDateOfBirthD__c</fullName>
        <description>Legal Entity DateOfBirthD</description>
        <label>legalEntityDateOfBirthD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDateOfBirthX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityDateOfBirthX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityDateOfBirth__c</fullName>
        <description>Legal Entity DateOfBirth</description>
        <label>legalEntityDateOfBirth</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDoingBusinessAsD__c</fullName>
        <description>Legal Entity DoingBusinessAsD</description>
        <label>legalEntityDoingBusinessAsD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDoingBusinessAsX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityDoingBusinessAsX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityDoingBusinessAs__c</fullName>
        <description>Legal Entity DoingBusinessAs</description>
        <label>legalEntityDoingBusinessAs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDriversLicenseD__c</fullName>
        <description>Legal Entity DriversLicenseD</description>
        <label>legalEntityDriversLicenseD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDriversLicenseStateD__c</fullName>
        <description>Legal Entity DriversLicenseStateD</description>
        <label>legalEntityDriversLicenseStateD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDriversLicenseStateX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityDriversLicenseStateX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityDriversLicenseState__c</fullName>
        <description>Legal Entity DriversLicenseState</description>
        <label>legalEntityDriversLicenseState</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDriversLicenseX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityDriversLicenseX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityDriversLicense__c</fullName>
        <description>Legal Entity DriversLicense</description>
        <label>legalEntityDriversLicense</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityFirstNameD__c</fullName>
        <description>Legal Entity FirstNameD</description>
        <label>legalEntityFirstNameD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityFirstNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityFirstNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityFirstName__c</fullName>
        <description>Legal Entity FirstName</description>
        <label>legalEntityFirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityHasAcceptedCreditCardsD__c</fullName>
        <description>Legal Entity HasAcceptedCreditCardsD</description>
        <label>legalEntityHasAcceptedCreditCardsDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityHasAcceptedCreditCardsX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityHasAcceptedCreditCardsX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityHasAcceptedCreditCards__c</fullName>
        <description>Legal Entity HasAcceptedCreditCards</description>
        <label>legalEntityHasAcceptedCreditCards</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityIsExclusiveToPspD__c</fullName>
        <description>Legal Entity IsExclusiveToPspD</description>
        <label>legalEntityIsExclusiveToPspD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityIsExclusiveToPspX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityIsExclusiveToPspX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityIsExclusiveToPsp__c</fullName>
        <description>Legal Entity IsExclusiveToPsp</description>
        <label>legalEntityIsExclusiveToPsp</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityIsPciComplianceValidatedD__c</fullName>
        <description>Legal Entity IsPciComplianceValidatedD</description>
        <label>legalEntityIsPciComplianceValidatedD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityIsPciComplianceValidatedX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityIsPciComplianceValidatedX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityIsPciComplianceValidated__c</fullName>
        <description>Legal Entity IsPciComplianceValidated</description>
        <label>legalEntityIsPciComplianceValidated</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityLastNameD__c</fullName>
        <description>Legal Entity LastNameD</description>
        <label>legalEntityLastNameD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityLastNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityLastNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityLastName__c</fullName>
        <description>Legal Entity LastName</description>
        <label>legalEntityLastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityMostRecentlyPassedScanD__c</fullName>
        <description>Legal Entity MostRecentlyPassedScanD</description>
        <label>legalEntityMostRecentlyPassedScanD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityMostRecentlyPassedScanX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityMostRecentlyPassedScanX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityMostRecentlyPassedScan__c</fullName>
        <description>Legal Entity MostRecentlyPassedScan</description>
        <label>legalEntityMostRecentlyPassedScan</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityNameD__c</fullName>
        <description>Legal Entity NameD</description>
        <label>legalEntityNameD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityName__c</fullName>
        <description>Legal Entity Name</description>
        <label>legalEntityName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPciLevelD__c</fullName>
        <description>Legal Entity PciLevelD</description>
        <label>legalEntityPciLevelD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPciLevelX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPciLevelX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPciLevel__c</fullName>
        <description>Legal Entity PciLevel</description>
        <label>legalEntityPciLevel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPostalCodeD__c</fullName>
        <description>Legal Entity PostalCodeD</description>
        <label>legalEntityPostalCodeD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPostalCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPostalCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPostalCode__c</fullName>
        <description>Legal Entity PostalCode</description>
        <label>legalEntityPostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCityD__c</fullName>
        <description>Legal Entity CityD</description>
        <label>legalEntityPrincipalCityD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCityX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalCityX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCity__c</fullName>
        <description>Legal Entity City</description>
        <label>legalEntityPrincipalCity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalContactPhoneD__c</fullName>
        <description>Legal Entity ContactPhoneD</description>
        <label>legalEntityPrincipalContactPhoneD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalContactPhoneX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalContactPhoneX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalContactPhone__c</fullName>
        <description>Legal Entity ContactPhone</description>
        <label>legalEntityPrincipalContactPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCountryCodeD__c</fullName>
        <description>Legal Entity CountryCodeD</description>
        <label>legalEntityPrincipalCountryCodeD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCountryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalCountryCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCountryCode__c</fullName>
        <description>Legal Entity CountryCode</description>
        <label>legalEntityPrincipalCountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDateOfBirthD__c</fullName>
        <description>legal Entity Principal Date Of Birth Default</description>
        <label>legalEntityPrincipalDateOfBirthD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDateOfBirthX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalDateOfBirthX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDateOfBirth__c</fullName>
        <description>Legal Entity Principal DateOfBirth</description>
        <label>legalEntityPrincipalDateOfBirth</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseD__c</fullName>
        <description>Legal Entity Principal DriversLicenseD</description>
        <label>legalEntityPrincipalDriversLicenseD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseStateD__c</fullName>
        <description>Legal Entity Principal DriversLicenseStateD</description>
        <label>legalEntityPrincipalDriversLicenseStateD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseStateX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalDriversLicenseStateX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseState__c</fullName>
        <description>Legal Entity Principal DriversLicenseState</description>
        <label>legalEntityPrincipalDriversLicenseState</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalDriversLicenseX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicense__c</fullName>
        <description>Legal Entity Principal DriversLicense</description>
        <label>legalEntityPrincipalDriversLicense</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalEmailAddressD__c</fullName>
        <description>Legal Entity Principal EmailAddressD</description>
        <label>legalEntityPrincipalEmailAddressD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalEmailAddressX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalEmailAddressX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalEmailAddress__c</fullName>
        <description>Legal Entity Principal EmailAddress</description>
        <label>legalEntityPrincipalEmailAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalFirstNameD__c</fullName>
        <description>Legal Entity Principal FirstNameD</description>
        <label>legalEntityPrincipalFirstNameD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalFirstNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalFirstNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalFirstName__c</fullName>
        <description>Legal Entity Principal FirstName</description>
        <label>legalEntityPrincipalFirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalLastNameD__c</fullName>
        <description>Legal Entity Principal LastNameD</description>
        <label>legalEntityPrincipalLastNameD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalLastNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalLastNameX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalLastName__c</fullName>
        <description>Legal Entity Principal LastName</description>
        <label>legalEntityPrincipalLastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalPostalCodeD__c</fullName>
        <description>Legal Entity PostalCodeD</description>
        <label>legalEntityPrincipalPostalCodeD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalPostalCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalPostalCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalPostalCode__c</fullName>
        <description>Legal Entity PostalCode</description>
        <label>legalEntityPrincipalPostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalSsnD__c</fullName>
        <description>Legal Entity Principal SsnD</description>
        <label>legalEntityPrincipalSsnD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalSsnX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalSsnX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalSsn__c</fullName>
        <description>Legal Entity Principal Ssn</description>
        <label>legalEntityPrincipalSsn</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStateProvinceD__c</fullName>
        <description>Legal Entity StateProvinceD</description>
        <label>legalEntityPrincipalStateProvinceD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStateProvinceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalStateProvinceX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStateProvince__c</fullName>
        <description>Legal Entity StateProvince</description>
        <label>legalEntityPrincipalStateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress1D__c</fullName>
        <description>Legal Entity StreetAddress1D</description>
        <label>legalEntityPrincipalStreetAddress1D</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress1X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalStreetAddress1X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress1__c</fullName>
        <description>Legal Entity StreetAddress1</description>
        <label>legalEntityPrincipalStreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress2D__c</fullName>
        <description>Legal Entity StreetAddress2D</description>
        <label>legalEntityPrincipalStreetAddress2D</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress2X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityPrincipalStreetAddress2X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress2__c</fullName>
        <description>Legal Entity StreetAddress2</description>
        <label>legalEntityPrincipalStreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityQualifiedSecurityAssessorD__c</fullName>
        <description>Legal Entity QualifiedSecurityAssessorD</description>
        <label>legalEntityQualifiedSecurityAssessorD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityQualifiedSecurityAssessorX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityQualifiedSecurityAssessorX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityQualifiedSecurityAssessor__c</fullName>
        <description>Legal Entity QualifiedSecurityAssessor</description>
        <label>legalEntityQualifiedSecurityAssessor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityReportOnComplianceD__c</fullName>
        <description>Legal Entity ReportOnComplianceD</description>
        <label>legalEntityReportOnComplianceD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityReportOnComplianceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityReportOnComplianceX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityReportOnCompliance__c</fullName>
        <description>Legal Entity ReportOnCompliance</description>
        <label>legalEntityReportOnCompliance</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityScanningVendorD__c</fullName>
        <description>Legal Entity ScanningVendorD</description>
        <label>legalEntityScanningVendorD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityScanningVendorX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityScanningVendorX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityScanningVendor__c</fullName>
        <description>Legal Entity ScanningVendor</description>
        <label>legalEntityScanningVendor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntitySsnD__c</fullName>
        <description>Legal Entity SsnD</description>
        <label>legalEntitySsnD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntitySsnX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntitySsnX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntitySsn__c</fullName>
        <description>Legal Entity Ssn</description>
        <label>legalEntitySsn</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStateProvinceD__c</fullName>
        <description>Legal Entity StateProvinceD</description>
        <label>legalEntityStateProvinceD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStateProvinceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityStateProvinceX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityStateProvince__c</fullName>
        <description>Legal Entity StateProvince</description>
        <label>legalEntityStateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress1D__c</fullName>
        <description>Legal Entity StreetAddress1D</description>
        <label>legalEntityStreetAddress1D</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress1X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityStreetAddress1X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress1__c</fullName>
        <description>Legal Entity StreetAddress1</description>
        <label>legalEntityStreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress2D__c</fullName>
        <description>Legal Entity StreetAddress2D</description>
        <label>legalEntityStreetAddress2D</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress2X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityStreetAddress2X</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress2__c</fullName>
        <description>Legal Entity StreetAddress2</description>
        <label>legalEntityStreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTaxIdD__c</fullName>
        <description>Legal Entity TaxIdD</description>
        <label>legalEntityTaxIdD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTaxIdX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityTaxIdX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityTaxId__c</fullName>
        <description>Legal Entity TaxId</description>
        <label>legalEntityTaxId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTypeD__c</fullName>
        <description>Legal Entity TypeD</description>
        <label>legalEntityTypeD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTypeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityTypeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityType__c</fullName>
        <description>Legal Entity Type</description>
        <label>legalEntityType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>litleEnvironment__c</fullName>
        <description>Stores the environment for MP</description>
        <label>Litle Environment</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merchantPassword__c</fullName>
        <description>password used to connect to make litle request</description>
        <label>merchantPassword</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>merchantUsername__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Merchant username for Litle requests</description>
        <label>merchantUsername</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>subMerchantAmexMidD__c</fullName>
        <description>Sub Merchant AmexMidD</description>
        <label>subMerchantAmexMidDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantAmexMidX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantAmexMidX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantAmexMid__c</fullName>
        <description>Sub Merchant AmexMid</description>
        <label>subMerchantAmexMid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankAccountNumberD__c</fullName>
        <description>Sub Merchant BankAccountNumberD</description>
        <label>subMerchantBankAccountNumberDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankAccountNumberX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantBankAccountNumberX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantBankAccountNumber__c</fullName>
        <description>Sub Merchant BankAccountNumber</description>
        <label>subMerchantBankAccountNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankRoutingNumberD__c</fullName>
        <description>Sub Merchant BankRoutingNumberD</description>
        <label>subMerchantBankRoutingNumberDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankRoutingNumberX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantBankRoutingNumberX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantBankRoutingNumber__c</fullName>
        <description>Sub Merchant BankRoutingNumber</description>
        <label>subMerchantBankRoutingNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCityD__c</fullName>
        <description>Sub Merchant CityD</description>
        <label>subMerchantCityDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCityX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantCityX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCity__c</fullName>
        <description>Sub Merchant City</description>
        <label>subMerchantCity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCountryCodeD__c</fullName>
        <description>Sub Merchant CountryCodeD</description>
        <label>subMerchantCountryCodeDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCountryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantCountryCodeX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCountryCode__c</fullName>
        <description>Sub Merchant CountryCode</description>
        <label>subMerchantCountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCreateCredentialsD__c</fullName>
        <description>Sub Merchant CreateCredentialsD</description>
        <label>subMerchantCreateCredentialsDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCreateCredentialsX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantCreateCredentialsX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCreateCredentials__c</fullName>
        <description>Sub Merchant CreateCredentials</description>
        <label>subMerchantCreateCredentials</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCustomerServiceNumberD__c</fullName>
        <description>Sub Merchant CustomerServiceNumberD</description>
        <label>subMerchantCustomerServiceNumberDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCustomerServiceNumberX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantCustomerServiceNumberX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCustomerServiceNumber__c</fullName>
        <description>Sub Merchant CustomerServiceNumber</description>
        <label>subMerchantCustomerServiceNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantDiscoverConveyMidD__c</fullName>
        <description>Sub Merchant DiscoverConveyMidD</description>
        <label>subMerchantDiscoverConveyMidDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantDiscoverConveyMidX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>subMerchantDiscoverConveyMidX</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>